| Bug #58746 | lock_number_of_rows_locked() is not thread safe | ||
|---|---|---|---|
| Submitted: | 6 Dec 2010 5:57 | Modified: | 13 Feb 2012 3:30 |
| Reporter: | Sunny Bains | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: InnoDB storage engine | Severity: | S2 (Serious) |
| Version: | trunk | OS: | Any |
| Assigned to: | Sunny Bains | CPU Architecture: | Any |
[6 Dec 2010 5:57]
Sunny Bains
[22 Dec 2010 21:31]
Bugs System
Pushed into mysql-trunk 5.6.1 (revid:alexander.nozdrin@oracle.com-20101222212842-y0t3ibtd32wd9qaw) (version source revid:alexander.nozdrin@oracle.com-20101222212842-y0t3ibtd32wd9qaw) (merge vers: 5.6.1) (pib:24)
