Fix Bug #58746 - lock_number_of_rows_locked() is not thread safe lock_number_of_rows_locked() was not thread safe. Fix is to tighten up the rules of trx_print() and change the code from where lock_number_of_rows_locked() is called. The main change is in trx0i_s.c and clarifying the access rules for trx_t::lock::trx_locks.

rb://534 Approved by Jimmy Yang.