storage/innobase/lock/lock0lock.c
@@ -1612,10 +1612,12 @@ UNIV_INTERN
 ulint
 lock_number_of_rows_locked(
 /*=======================*/
-	const trx_t*	trx)	/*!< in: transaction */
+	trx_t*		trx)	/*!< in: transaction */
 {
 	lock_t*	lock;
 	ulint   n_records = 0;
+
+	ut_ad(trx_mutex_own(trx));
 
 	for (lock = UT_LIST_GET_FIRST(trx->lock.trx_locks);
 	     lock != NULL;
@@ -1654,7 +1656,9 @@ lock_rec_create(
 	ulint			heap_no,/*!< in: heap number of the record */
 	dict_index_t*		index,	/*!< in: index of record */
 	trx_t*			trx,	/*!< in: transaction */
-	ibool			append)	/*!< in: if TRUE add to wait_locks */
+	ibool			caller_owns_trx_mutex)
+					/*!< in: TRUE if caller owns
+					trx mutex */
 {
 	lock_t*		lock;
 	ulint		page_no;
@@ -1716,8 +1720,14 @@ lock_rec_create(
 		lock_set_lock_and_trx_wait(lock, trx);
 	}
 
-	if (append) {
-		UT_LIST_ADD_LAST(trx_locks, trx->lock.trx_locks, lock);
+	if (!caller_owns_trx_mutex) {
+		trx_mutex_enter(trx);
+	}
+
+	UT_LIST_ADD_LAST(trx_locks, trx->lock.trx_locks, lock);
+
+	if (!caller_owns_trx_mutex) {
+		trx_mutex_exit(trx);
 	}
 
 	MONITOR_INC(MONITOR_RECLOCK_CREATED);
@@ -1787,7 +1797,8 @@ lock_rec_enqueue_waiting(
 		      stderr);
 	}
 
-	/* Enqueue the lock request that will wait to be granted */
+	/* Enqueue the lock request that will wait to be granted, note that
+	we already own the trx mutex. */
 	lock = lock_rec_create(
 		type_mode | LOCK_WAIT, block, heap_no, index, trx, TRUE);
 
@@ -1848,7 +1859,10 @@ lock_rec_add_to_queue(
 					the record */
 	ulint			heap_no,/*!< in: heap number of the record */
 	dict_index_t*		index,	/*!< in: index of record */
-	trx_t*			trx)	/*!< in: transaction */
+	trx_t*			trx,	/*!< in: transaction */
+	ibool			caller_owns_trx_mutex)
+					/*!< in: TRUE if caller owns the
+					transaction mutex */
 {
 	lock_t*	lock;
 	lock_t*	first_lock;
@@ -1921,7 +1935,10 @@ lock_rec_add_to_queue(
 	}
 
 somebody_waits:
-	return(lock_rec_create(type_mode, block, heap_no, index, trx, TRUE));
+	/* Note that we don't own the trx mutex. */
+	return(lock_rec_create(
+			type_mode, block, heap_no, index, trx,
+			caller_owns_trx_mutex));
 }
 
 /** Record locking request status */
@@ -1980,16 +1997,11 @@ lock_rec_lock_fast(
 
 	if (lock == NULL) {
 		if (!impl) {
+			/* Note that we don't own the trx mutex. */
 			lock = lock_rec_create(
 				mode, block, heap_no, index, trx, FALSE);
 
-			trx_mutex_enter(trx);
-
-			UT_LIST_ADD_LAST(trx_locks, trx->lock.trx_locks, lock);
-
-			trx_mutex_exit(trx);
 		}
-
 		status = LOCK_REC_SUCCESS_CREATED;
 	} else {
 		trx_mutex_enter(trx);
@@ -2073,10 +2085,12 @@ lock_rec_lock_slow(
 		err = lock_rec_enqueue_waiting(mode, block, heap_no,
 						index, thr);
 	} else if (!impl) {
-		/* Set the requested lock on the record */
+		/* Set the requested lock on the record, note that we already
+		own the transaction mutex. */
 
-		lock_rec_add_to_queue(LOCK_REC | mode, block,
-				      heap_no, index, trx);
+		lock_rec_add_to_queue(
+			LOCK_REC | mode, block, heap_no, index, trx, TRUE);
+
 		err = DB_SUCCESS_LOCKED_REC;
 	}
 
@@ -2460,10 +2474,10 @@ lock_rec_inherit_to_gap(
 			  <= TRX_ISO_READ_COMMITTED)
 			 && lock_get_mode(lock) == LOCK_X)) {
 
-			lock_rec_add_to_queue(LOCK_REC | LOCK_GAP
-					      | lock_get_mode(lock),
-					      heir_block, heir_heap_no,
-					      lock->index, lock->trx);
+			lock_rec_add_to_queue(
+				LOCK_REC | LOCK_GAP | lock_get_mode(lock),
+				heir_block, heir_heap_no, lock->index,
+				lock->trx, FALSE);
 		}
 	}
 }
@@ -2496,10 +2510,10 @@ lock_rec_inherit_to_gap_if_gap_lock(
 		    && (heap_no == PAGE_HEAP_NO_SUPREMUM
 			|| !lock_rec_get_rec_not_gap(lock))) {
 
-			lock_rec_add_to_queue(LOCK_REC | LOCK_GAP
-					      | lock_get_mode(lock),
-					      block, heir_heap_no,
-					      lock->index, lock->trx);
+			lock_rec_add_to_queue(
+				LOCK_REC | LOCK_GAP | lock_get_mode(lock),
+				block, heir_heap_no, lock->index,
+				lock->trx, FALSE);
 		}
 	}
 
@@ -2545,8 +2559,9 @@ lock_rec_move(
 		/* Note that we FIRST reset the bit, and then set the lock:
 		the function works also if donator == receiver */
 
-		lock_rec_add_to_queue(type_mode, receiver, receiver_heap_no,
-				      lock->index, lock->trx);
+		lock_rec_add_to_queue(
+			type_mode, receiver, receiver_heap_no,
+			lock->index, lock->trx, FALSE);
 	}
 
 	ut_ad(lock_rec_get_first(donator, donator_heap_no) == NULL);
@@ -2652,9 +2667,9 @@ lock_move_reorganize_page(
 				/* NOTE that the old lock bitmap could be too
 				small for the new heap number! */
 
-				lock_rec_add_to_queue(lock->type_mode, block,
-						      new_heap_no,
-						      lock->index, lock->trx);
+				lock_rec_add_to_queue(
+					lock->type_mode, block, new_heap_no,
+					lock->index, lock->trx, FALSE);
 
 				/* if (new_heap_no == PAGE_HEAP_NO_SUPREMUM
 				&& lock_get_wait(lock)) {
@@ -2776,9 +2791,9 @@ lock_move_rec_list_end(
 						page_cur_get_rec(&cur2));
 				}
 
-				lock_rec_add_to_queue(type_mode,
-						      new_block, heap_no,
-						      lock->index, lock->trx);
+				lock_rec_add_to_queue(
+					type_mode, new_block, heap_no,
+					lock->index, lock->trx, FALSE);
 			}
 
 			page_cur_move_to_next(&cur1);
@@ -2807,7 +2822,8 @@ UNIV_INTERN
 void
 lock_move_rec_list_start(
 /*=====================*/
-	const buf_block_t*	new_block,	/*!< in: index page to move to */
+	const buf_block_t*	new_block,	/*!< in: index page to
+						move to */
 	const buf_block_t*	block,		/*!< in: index page */
 	const rec_t*		rec,		/*!< in: record on page:
 						this is the first
@@ -2872,9 +2888,9 @@ lock_move_rec_list_start(
 						page_cur_get_rec(&cur2));
 				}
 
-				lock_rec_add_to_queue(type_mode,
-						      new_block, heap_no,
-						      lock->index, lock->trx);
+				lock_rec_add_to_queue(
+					type_mode, new_block, heap_no,
+					lock->index, lock->trx, FALSE);
 			}
 
 			page_cur_move_to_next(&cur1);
@@ -3668,6 +3684,7 @@ lock_table_create(
 
 	ut_ad(table && trx);
 	ut_ad(lock_mutex_own());
+	ut_ad(trx_mutex_own(trx));
 
 	if ((type_mode & LOCK_MODE_MASK) == LOCK_AUTO_INC) {
 		++table->n_waiting_or_granted_auto_inc_locks;
@@ -5365,7 +5382,7 @@ lock_rec_convert_impl_to_expl(
 
 			lock_rec_add_to_queue(
 				LOCK_REC | LOCK_X | LOCK_REC_NOT_GAP,
-				block, heap_no, index, impl_trx);
+				block, heap_no, index, impl_trx, FALSE);
 		}
 
 		lock_mutex_exit();
